DisplayPoll Component:  displaying graph, table with delete functionality.  addition of backend to serve these functions as well. Merge remote-tracking branch 'origin/dev' into boDisplay
Co-authored-by: Troy Prejusa <tprejusa@users.noreply.github.com>

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="root"></div>
     <!-- <script type="module" src="acquisitions.js"></script>
-    <div><canvas id="acquisitions"></canvas></div> -->
-    <!-- <script defer src="bundle.js"></script> -->
+    <div><canvas id="acquisitions"></canvas></div> --> 
+    <!-- <script defer src="bundle.js"></script>
 </body>
 </html>
